MW-141: A user with REPORTS_VIEW right should be able to view all the report filters
