# src/main/java/mw/gov/health/lmis/reports/web/ReportsController.java
@@ -1,0 +1,99 @@
+package mw.gov.health.lmis.reports.web;
+
+import mw.gov.health.lmis.reports.dto.external.GeographicZoneDto;
+import mw.gov.health.lmis.reports.dto.external.ProcessingPeriodDto;
+import mw.gov.health.lmis.reports.dto.external.ProgramDto;
+import mw.gov.health.lmis.reports.dto.external.StockAdjustmentReasonDto;
+import mw.gov.health.lmis.reports.service.PermissionService;
+import mw.gov.health.lmis.reports.service.referencedata.GeographicZoneReferenceDataService;
+import mw.gov.health.lmis.reports.service.referencedata.PeriodReferenceDataService;
+import mw.gov.health.lmis.reports.service.referencedata.ProgramReferenceDataService;
+import mw.gov.health.lmis.reports.service.referencedata.StockAdjustmentReasonReferenceDataService;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.stereotype.Controller;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.ResponseBody;
+import org.springframework.web.bind.annotation.ResponseStatus;
+
+import java.util.Collection;
+import java.util.UUID;
+
+@Controller
+@Transactional
+@RequestMapping("/api/reports")
+public class ReportsController extends BaseController {
+  private static int DISTRICT_LEVEL = 3;
+
+  @Autowired
+  private GeographicZoneReferenceDataService geographicZoneReferenceDataService;
+
+  @Autowired
+  private PeriodReferenceDataService periodReferenceDataService;
+
+  @Autowired
+  private ProgramReferenceDataService programReferenceDataService;
+
+  @Autowired
+  private StockAdjustmentReasonReferenceDataService stockAdjustmentReasonReferenceDataService;
+
+  @Autowired
+  private PermissionService permissionService;
+
+  /**
+   * Get all districts.
+   *
+   * @return districts.
+   */
+  @RequestMapping(value = "/districts", method = RequestMethod.GET)
+  @ResponseStatus(HttpStatus.OK)
+  @ResponseBody
+  public Collection<GeographicZoneDto> getDistricts() {
+    permissionService.canViewReports();
+    return geographicZoneReferenceDataService.search(DISTRICT_LEVEL, null);
+  }
+
+  /**
+   * Get all processing periods.
+   *
+   * @return processing periods.
+   */
+  @RequestMapping(value = "/processingPeriods", method = RequestMethod.GET)
+  @ResponseStatus(HttpStatus.OK)
+  @ResponseBody
+  public Collection<ProcessingPeriodDto> getProcessingPeriods() {
+    permissionService.canViewReports();
+    return periodReferenceDataService.findAll();
+  }
+
+  /**
+   * Get all programs.
+   *
+   * @return programs.
+   */
+  @RequestMapping(value = "/programs", method = RequestMethod.GET)
+  @ResponseStatus(HttpStatus.OK)
+  @ResponseBody
+  public Collection<ProgramDto> getPrograms() {
+    permissionService.canViewReports();
+    return programReferenceDataService.findAll();
+  }
+
+  /**
+   * Retrieves StockAdjustmentReasons for a specified program
+   *
+   * @param programId the program id.
+   * @return a list of StockAdjustmentReasons.
+   */
+  @RequestMapping(value = "/stockAdjustmentReasons/search", method = RequestMethod.GET)
+  @ResponseStatus(HttpStatus.OK)
+  @ResponseBody
+  public Collection<StockAdjustmentReasonDto> findStockAdjustmentReasonsByProgramId(
+          @RequestParam("program") UUID programId) {
+    permissionService.canViewReports();
+    return stockAdjustmentReasonReferenceDataService.search(programId);
+  }
+}
