# src/main/resources/api-definition.yaml
@@ -24,6 +24,40 @@ schemas:
 
   - localizedMessage: !include schemas/localizedMessage.json
 
+  - geographicLevel: !include schemas/geographicLevel.json
+
+  - geographicZone: !include schemas/geographicZone.json
+
+  - geographicZoneArray: |
+      {
+         "type": "array",
+         "items": { "type": "object", "$ref": "schemas/geographicZone.json" }
+      }
+
+  - processingPeriod: !include schemas/processingPeriod.json
+
+  - processingPeriodArray: |
+      {
+          "type": "array",
+          "items": { "type": "object", "$ref": "schemas/processingPeriod.json" }
+      }
+
+  - program: !include schemas/program.json
+
+  - programArray: |
+      {
+          "type": "array",
+          "items": { "type": "object", "$ref":"schemas/program.json" }
+      }
+
+  - stockAdjustmentReason: !include schemas/stockAdjustmentReason.json
+
+  - stockAdjustmentReasonArray: |
+      {
+          "type": "array",
+          "items": { "type": "object", "$ref": "schemas/stockAdjustmentReason.json" }
+      }
+
 traits:
     - secured:
           queryParameters:
@@ -93,100 +127,139 @@ resourceTypes:
 
 /api:
 
-  /reports/templates/malawi:
-      displayName: Report Template
-      post:
-          is: [ secured ]
-          description: Create or update report template.
-          body:
-              multipart/form-data:
-                formParameters:
-                    file:
-                         displayName: Template with .jrxml format
-                         type: file
-                         required: false
-                         repeat: false
-                    name:
-                         displayName: Name of Template in database
-                         type: string
-                         required: false
-                         repeat: false
-                    description:
-                         displayName: Description of Template
-                         type: string
-                         required: false
-                         repeat: false
-          responses:
-                200:
-                403:
-                    body:
-                      application/json:
-                        schema: localizedMessage
-      get:
-          is: [ secured ]
-          description: Get all templates.
-          responses:
-              200:
-                  body:
-                    application/json:
-                      schema: jasperTemplateDtoArray
-              403:
-                  body:
-                    application/json:
-                        schema: localizedMessage
-      /{id}:
-          uriParameters:
-              id:
-                  displayName: id
-                  type: string
-                  required: true
-                  repeat: false
-          delete:
-              is: [ secured ]
-              description: Delete chosen template.
-              responses:
-                  204:
-                  403:
-                      body:
-                        application/json:
-                            schema: localizedMessage
-                  404:
-                      body:
-                        application/json:
-                          schema: localizedMessage
+  /reports:
+      /districts:
+          displayName: Districts
           get:
               is: [ secured ]
-              description: Get chosen template.
+              description: Get all districts.
+              responses:
+                  "200":
+                      body:
+                        application/json:
+                          schema: geographicZoneArray
+                  "403":
+                      body:
+                        application/json:
+                          schema: localizedErrorResponse
+      /programs:
+          displayName: Programs
+          get:
+              is: [ secured ]
+              description: Get all programs.
+              responses:
+                  "200":
+                      body:
+                        application/json:
+                          schema: programArray
+                  "403":
+                      body:
+                        application/json:
+                          schema: localizedErrorResponse
+      /processingPeriods:
+          displayName: Processing periods
+          get:
+              is: [ secured ]
+              description: Get all processing periods.
+              responses:
+                  "200":
+                      body:
+                        application/json:
+                          schema: processingPeriodArray
+                  "403":
+                      body:
+                        application/json:
+                          schema: localizedErrorResponse
+      /stockAdjustmentReasons:
+          /search:
+              get:
+                  is: [ secured ]
+                  description: Search for Stock Adjustment Reasons.
+                  queryParameters:
+                      program:
+                          displayName: programId
+                          type: string
+                          required: true
+                          repeat: false
+                  responses:
+                      "200":
+                          body:
+                            application/json:
+                              schema: stockAdjustmentReasonArray
+                      "404":
+                      "403":
+                          body:
+                            application/json:
+                              schema: localizedErrorResponse
+      /templates/malawi:
+          displayName: Report Template
+          post:
+              is: [ secured ]
+              description: Create or update report template.
+              body:
+                  multipart/form-data:
+                    formParameters:
+                        file:
+                             displayName: Template with .jrxml format
+                             type: file
+                             required: false
+                             repeat: false
+                        name:
+                             displayName: Name of Template in database
+                             type: string
+                             required: false
+                             repeat: false
+                        description:
+                             displayName: Description of Template
+                             type: string
+                             required: false
+                             repeat: false
+              responses:
+                    200:
+                    403:
+                        body:
+                          application/json:
+                            schema: localizedMessage
+          get:
+              is: [ secured ]
+              description: Get all templates.
               responses:
                   200:
                       body:
                         application/json:
-                          schema: jasperTemplateDto
+                          schema: jasperTemplateDtoArray
                   403:
                       body:
                         application/json:
                             schema: localizedMessage
-                  404:
-                      body:
-                        application/json:
-                            schema: localizedMessage
-          /{format}:
+          /{id}:
               uriParameters:
-                  format:
-                      displayName: format
+                  id:
+                      displayName: id
                       type: string
                       required: true
                       repeat: false
+              delete:
+                  is: [ secured ]
+                  description: Delete chosen template.
+                  responses:
+                      204:
+                      403:
+                          body:
+                            application/json:
+                                schema: localizedMessage
+                      404:
+                          body:
+                            application/json:
+                              schema: localizedMessage
               get:
                   is: [ secured ]
-                  description: Generate report from template ID and format.
+                  description: Get chosen template.
                   responses:
                       200:
                           body:
-                            application/pdf:
-                            text/csv:
-                            application/vnd.ms-excel:
-                            text/html:
+                            application/json:
+                              schema: jasperTemplateDto
                       403:
                           body:
                             application/json:
@@ -195,6 +268,31 @@ resourceTypes:
                           body:
                             application/json:
                                 schema: localizedMessage
+              /{format}:
+                  uriParameters:
+                      format:
+                          displayName: format
+                          type: string
+                          required: true
+                          repeat: false
+                  get:
+                      is: [ secured ]
+                      description: Generate report from template ID and format.
+                      responses:
+                          200:
+                              body:
+                                application/pdf:
+                                text/csv:
+                                application/vnd.ms-excel:
+                                text/html:
+                          403:
+                              body:
+                                application/json:
+                                    schema: localizedMessage
+                          404:
+                              body:
+                                application/json:
+                                    schema: localizedMessage
 
   /settings:
       displayName: Settings.
